A few little updates

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,8 @@
-config.folder=${file.reference.test-config}
+config.folder=${file.reference.mySite-public_html}
+file.reference.mySite-public_html=public_html
 file.reference.test-config=config
 file.reference.test-public_html=public_html
 file.reference.test-test=test
 files.encoding=UTF-8
-site.root.folder=${file.reference.test-public_html}
-test.folder=${file.reference.test-test}
+site.root.folder=${file.reference.mySite-public_html}
+test.folder=
