Got a semi working simple slider.
Practicing angularJs for class and this is what i got.

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,4 @@
+browser=Chrome.INTEGRATED
 config=SL__Browsers_ChromeBrowser
 file.reference.test-config=C:\\Users\\Taber\\Documents\\NetBeansProjects\\mySite\\config
 file.reference.test-public_html=C:\\Users\\Taber\\Documents\\NetBeansProjects\\mySite\\public_html
